--- a/src/app/main/apps/dashboards/analytics/analytics.component.scss
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.scss
@@ -6,6 +6,13 @@
         display: flex;
         flex-direction: column;
     }
+    .text-muted{
+      color: gray;
+    }
+    .success-text{
+      color: #1a961a;
+      margin-bottom: 1rem;
+    }
 
     .content {
         display: flex;
