cahnge tab design

--- a/src/app/main/apps/dashboards/analytics/analytics.component.scss
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.scss
@@ -13,6 +13,10 @@
       color: #1a961a;
       margin-bottom: 1rem;
     }
+    .mat-tab-label-active{
+      background-color: #dadada !important;
+    }
+
 
     .content {
         display: flex;
